2008-10-08  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* tasque.mdp: WindowsApplication -> GtkApplication

2008-10-08  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/TaskGroup.cs:
	* src/Utilities.cs:
	* src/TaskWindow.cs:
	* src/Preferences.cs:
	* src/Application.cs:
	* src/TaskTreeView.cs:
	* src/AbstractTask.cs:
	* src/RemoteControl.cs:
	* src/PreferencesDialog.cs:
	* src/CompletedTaskGroup.cs:
	* src/Backends/EDS/EDSBackends.cs:
	* src/Backends/IceCore/IceBackend.cs:
	* src/Backends/Dummy/DummyBackend.cs:
	* src/Backends/Sqlite/SqliteBackend.cs: Increased readability of boolean
	  expressions.  Fixes bug #555168, patch courtesy of Alex Launi.

2008-10-06  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* tasque.csproj: WindowsApplication.cs -> GtkApplication.cs.

2008-09-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* bundle-mac-app.sh: Use those variables, silly.

2008-09-29  Jakub Steiner <jimmac@ximian.com>

	* data/images/tasque-256.png: 
	* data/images/tasque-icons-source.svg: add a high resolution
	"icon" for the OSX build. Still figuring out how to produce the
	native icon format.

2008-09-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Use OSXApplication if OSX is defined.

2008-09-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* macbin/: Added pre-compiled ige-mac-integration-sharp.dll from
	  Eoin's banshee-osx git repo.  Thanks Eoin!
	* osx/: Configuration, execution, and icon files for app bundle.
	* bunde-mac-app.sh: Stupid little script to build the app bundle.
	* data/images/tasque.ico: Windows icon, for the future.
	* RtmNet/AssemblyInfo.cs: No need to be CLSCompliant.
	* src/OSXApplication.cs: Integration code for Mac menu bar.

2008-09-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/GtkApplication.cs, src/Makefile.am, src/WindowsApplication.cs:
	  Complete rename of WindowsApplication->GtkApplication.

2008-09-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 
